--- a/index.html
+++ b/index.html
@@ -3,9 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Myntra_Clone</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="https://kit.fontawesome.com/c0fcc9835a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <div class="logo_container">
+            <a href="#">
+                <img class="logo" src="images/Myntra_Logo.webp" alt="Logo" height="36px">
+            </a>
+        </div>
+        <div class="nav_bar">
+            <a href="#">Men</a>
+            <a href="#">Women</a>
+            <a href="#">Kids</a>
+            <a href="#">Home</a>
+            <a href="#">Beauty</a>
+            <a href="#">Genz</a>
+            <a href="#">Studio <sup>new</sup></a>
+        </div>
+        <div class="search_bar">
+            <span class="material-symbols-outlined search_icon">search</span>
+            <input class="search_input" placeholder="Search for products, brands and more">
+        </div>
+        <div class="action_bar">
+            <div class="action_container">
+                <a href="#">
+                    <span class="material-symbols-outlined action_icon">person</span>
+                    <span class="action_name">Profile</span>
+                </a>
+            </div>
+            <div class="action_container">
+                <a href="#">
+                    <span class="material-symbols-outlined action_icon">favorite</span>
+                    <span class="action_name">Wishlist</span>
+                </a>
+            </div>
+            <div class="action_container">
+                <a href="#">
+                    <span class="material-symbols-outlined action_icon">shopping_bag</span>
+                    <span class="action_name">Bag</span>
+                </a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="banner_container">
+            <img class=banner_image src="images/banner2.jpg" alt="Main Banner">
+        </div>
+        <div class="category_heading">Medal Worthy Brands to Bag</div>
+        <div class="category_items">
+            <a href="#"><img class="category_images" src="images/offers/1.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/offers/2.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/offers/3.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/offers/4.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/offers/5.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/offers/6.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/offers/7.webp" alt=""></a>
+        </div>
+        <div class="category_heading">Shop by Category</div>
+        <div class="category_items">
+            <a href="#"><img class="category_images" src="images/categories/1.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/2.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/3.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/4.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/5.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/6.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/7.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/8.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/9.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/10.webp" alt=""></a>
+        </div>
+    </main>
+    <footer>
+        <div class="footer_container">
+            <div class="footer_column">
+                <h3>ONLINE SHOPPING</h3>
+                <a href="#">Men</a>
+                <a href="#">Women</a>
+                <a href="#">Kids</a>
+                <a href="#">Home</a>
+                <a href="#">Beauty</a>
+                <a href="#">Genz</a>
+                <a href="#">Gift Cards</a>
+                <a href="#">Myntra Insider</a>
+            </div>
+            <div class="footer_column">
+                <h3>CUSTOMER POLICIES</h3>
+                <a href="#">Contact Us</a>
+                <a href="#">FAQ</a>
+                <a href="#">T&C</a>
+                <a href="#">Terms Of Use</a>
+                <a href="#">Track Orders</a>
+                <a href="#">Shipping</a>
+                <a href="#">Cancellation</a>
+                <a href="#">Returns</a>
+                <a href="#">Privacy policy</a>
+                <a href="#">Grievance Redressal</a>
+            </div>
+            <div class="footer_column">
+                <h3>EXPERIENCE MYNTRA APP ON MOBILE</h3>
+                <div class="badge_container">
+                    <a href="#" class="footer_badge"><img src="images/badges/Google_Play.png" alt="Get it on Google Play" height="42px" width="140px"></a>
+                    <a href="#" class="footer_badge"><img src="images/badges/App_Store.png" alt="Get it on App Store" height="42px" width="122px"></a>
+                </div>
+            </div>
+            <div class="footer_column socials">
+                <h3>KEEP IN TOUCH</h3>
+                <div class="socials_icon_container">
+                    <a href="#"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <span>In case of any concern, Contact Us</span>
+            <span>© 2025 www.myntra.com. All rights reserved.</span>
+            <span>A Flipkart company</span>
+        </div>
+        <br><hr><br>
+        <div class="address">
+            <h3>Registered Office Address</h3>
+            <p>Buildings Alyssa,<br>
+            Begonia and Clover situated in Embassy Tech Village,<br>
+            Outer Ring Road,<br>
+            Devarabeesanahalli Village,<br>
+            Varthur Hobli,<br>
+            Bengaluru – 560103, India <br></p>
+        </div>
+        <br>
+        <hr>
+    </footer>
 </body>
 </html>
