Fixed footer background colour issue

--- a/index.html
+++ b/index.html
@@ -120,23 +120,25 @@
                 </div>
             </div>
         </div>
-        <div class="copyright">
-            <span>In case of any concern, Contact Us</span>
-            <span>© 2025 www.myntra.com. All rights reserved.</span>
-            <span>A Flipkart company</span>
-        </div>
-        <br><hr><br>
-        <div class="address">
-            <h3>Registered Office Address</h3>
-            <p>Buildings Alyssa,<br>
-            Begonia and Clover situated in Embassy Tech Village,<br>
-            Outer Ring Road,<br>
-            Devarabeesanahalli Village,<br>
-            Varthur Hobli,<br>
-            Bengaluru – 560103, India <br></p>
-        </div>
-        <br>
-        <hr>
+        <div class="footer_container2">
+            <div class="copyright">
+                <span>In case of any concern, Contact Us</span>
+                <span>© 2025 www.myntra.com. All rights reserved.</span>
+                <span>A Flipkart company</span>
+            </div>
+            <br><hr><br>
+            <div class="address">
+                <h3>Registered Office Address</h3>
+                <p>Buildings Alyssa,<br>
+                Begonia and Clover situated in Embassy Tech Village,<br>
+                Outer Ring Road,<br>
+                Devarabeesanahalli Village,<br>
+                Varthur Hobli,<br>
+                Bengaluru – 560103, India <br></p>
+            </div>
+            <br>
+            <hr>
+            </div>
     </footer>
 </body>
 </html>
