Different bottom border colour for different category in navigation bar

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             </a>
         </div>
         <div class="nav_bar">
-            <a href="#">Men</a>
-            <a href="#">Women</a>
-            <a href="#">Kids</a>
-            <a href="#">Home</a>
-            <a href="#">Beauty</a>
-            <a href="#">Genz</a>
-            <a href="#">Studio <sup>new</sup></a>
+            <a href="#" class="red_bar">Men</a>
+            <a href="#" class="red_bar">Women</a>
+            <a href="#" class="red_bar">Kids</a>
+            <a href="#" class="yellow_bar">Home</a>
+            <a href="#" class="green_bar">Beauty</a>
+            <a href="#" class="green_bar">Genz</a>
+            <a href="#" class="red_bar">Studio <sup>new</sup></a>
         </div>
         <div class="search_bar">
             <span class="material-symbols-outlined search_icon">search</span>
