Made the webpage responsive to mobile devices

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <header>
+        <div class="hamburger_menu">
+            <span class="material-symbols-outlined">menu</span>
+        </div>
         <div class="logo_container">
             <a href="#">
                 <img class="logo" src="images/Myntra_Logo.webp" alt="Logo" height="36px">
@@ -47,6 +50,14 @@
                     <span class="action_name">Bag</span>
                 </a>
             </div>
+        </div>
+        <div class="mobile_searchbar">
+            <a href="#">
+                <div class="dummy_box">
+                    <span class="material-symbols-outlined search_mat dummy_box_icon">search</span>
+                    <span class="search_mat dummy_box_text">Search for brands and products</span>
+                </div>
+            </a>
         </div>
     </header>
     <main>
