Added dedicated search page for mobile devices

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="mobile_searchbar">
-            <a href="#">
+            <a href="pages/autosuggest.html">
                 <div class="dummy_box">
                     <span class="material-symbols-outlined search_mat dummy_box_icon">search</span>
                     <span class="search_mat dummy_box_text">Search for brands and products</span>
