Fixed back button broken link

--- a/pages/autosuggest.html
+++ b/pages/autosuggest.html
@@ -73,7 +73,7 @@
     <header>
         <div class="search_container">
             <div class="back_button">
-                <a href=".."><span class="material-symbols-outlined back_icon">arrow_back</span></a>
+                <a href="../index.html"><span class="material-symbols-outlined back_icon">arrow_back</span></a>
             </div>
             <div class="search_bar">
                 <input class="search_input" placeholder="Search for brands & products">
