--- a/pages/autosuggest.html
+++ b/pages/autosuggest.html
@@ -9,6 +9,7 @@
         *{
             padding: 0;
             margin: 0;
+            -webkit-tap-highlight-color: transparent;
         }
         header{
             background-color: #f5f5f5;
