--- a/index.html
+++ b/index.html
@@ -76,16 +76,18 @@
         </div>
         <div class="category_heading">Shop by Category</div>
         <div class="category_items">
-            <a href="#"><img class="category_images" src="images/categories/1.webp" alt=""></a>
-            <a href="#"><img class="category_images" src="images/categories/2.webp" alt=""></a>
-            <a href="#"><img class="category_images" src="images/categories/3.webp" alt=""></a>
-            <a href="#"><img class="category_images" src="images/categories/4.webp" alt=""></a>
-            <a href="#"><img class="category_images" src="images/categories/5.webp" alt=""></a>
-            <a href="#"><img class="category_images" src="images/categories/6.webp" alt=""></a>
-            <a href="#"><img class="category_images" src="images/categories/7.webp" alt=""></a>
-            <a href="#"><img class="category_images" src="images/categories/8.webp" alt=""></a>
-            <a href="#"><img class="category_images" src="images/categories/9.webp" alt=""></a>
-            <a href="#"><img class="category_images" src="images/categories/10.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/1.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/2.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/3.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/4.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/5.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/6.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/7.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/8.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/9.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/10.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/11.avif" alt=""></a>
+            <a href="#"><img class="category_images" src="images/categories/12.avif" alt=""></a>
         </div>
     </main>
     <footer>
