--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="hamburger_menu">
-            <span class="material-symbols-outlined">menu</span>
+            <a href="#">
+                <span class="material-symbols-outlined">menu</span>
+            </a>
         </div>
         <div class="logo_container">
             <a href="#">
