Changed banner and minor improvements in spacing and margin

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </header>
     <main>
         <div class="banner_container">
-            <img class=banner_image src="images/banner2.jpg" alt="Main Banner">
+            <img class=banner_image src="images/offer_banner.jpg" alt="Offer Banner" style="margin-bottom: 0;">
+            <img class=banner_image src="images/banner3.png" alt="Main Banner" style="margin-top: 0;">
         </div>
         <div class="category_heading">Medal Worthy Brands to Bag</div>
         <div class="category_items">
