--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="hamburger_menu">
             <a href="#">
-                <span class="material-symbols-outlined">menu</span>
+                <span class="material-symbols-outlined menu-icon">menu</span>
             </a>
         </div>
         <div class="logo_container">
