--- a/pages/autosuggest.html
+++ b/pages/autosuggest.html
@@ -32,6 +32,7 @@
             left: 12px;
             top: 2px;
             font-size: 30px;
+            color: black;
             font-variation-settings:
             'FILL' 0,
             'wght' 200,
