--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             <a href="#"><img class="category_images" src="images/offers/5.webp" alt=""></a>
             <a href="#"><img class="category_images" src="images/offers/6.webp" alt=""></a>
             <a href="#"><img class="category_images" src="images/offers/7.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/offers/8.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/offers/9.webp" alt=""></a>
+            <a href="#"><img class="category_images" src="images/offers/10.webp" alt=""></a>
         </div>
         <div class="category_heading">Shop by Category</div>
         <div class="category_items">
